--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -20,5 +16,6 @@
 # Ignore Byebug command history file.
 .byebug_history
 
-#I don't want to share my secrets
-/config/secret.yml
+# I don't want to show my secrets
+/config/secrets.yml
+.env
